fix: JDK 11 support